--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "typescript": "^4.9.5",
-      "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+      "react-scripts": "5.0.1"
    },
    "devDependencies": {
-      "file-loader": "^6.2.0",
-      "react-scripts": "5.0.1"
+      "file-loader": "^6.2.0"
    },
    "scripts": {
       "start": "react-scripts start",
